@@ -1,2 +1,0 @@
-[actions]
-action.success=redirect_to_action:string:view
