@@ -8,7 +8,6 @@ validators..cancel =
 
 [actions]
 action.success = traverse_to:string:content_edit
-action.success..claimthistask = traverse_to:string:claim_task
 action.success..form_add = traverse_to:string:add_reference
 action.success..cancel = traverse_to:string:go_back
 action.failure = traverse_to_action:string:view
