@@ -4,6 +4,9 @@ Changelog
 0.7
 ---
 
+- Removed the `claimTask` functionality.
+  [hannosch]
+
 - Really disable all of linkintegrity by overriding the event handlers.
   [hannosch]
 
